# agentprobe

./: .gitignore  CHANGELOG.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DELIVERABLES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PHASE2_IMPLEMENTATION.md  README.md  RESILIENCE.md  SECURITY.md  STEP3_COMPLETION.md  STEP3_FINAL_SUMMARY.md  STEP3_MANIFEST.txt  STEP3_QUICK_REFERENCE.md  TROUBLESHOOTING.md  action.yml  debug_forward.py  deepseek_channel_scan.csv  full_channel_scan.csv  gpt4o.csv  gpt4omini.csv  haiku45.csv  mcnemar_test.py  plot_pareto.py  plot_results.py  pyproject.toml  rag_memory_scan.csv  run_injection_harness.py  run_injection_stats.py  run_utility_harness.py  utility_gpt4o.csv  utility_gpt4omini.csv  utility_haiku45.csv
.github/workflows/: ci.yml
agentprobe/: __init__.py  analyze.py  cli.py  compare.py  engine.py  engine_async.py  harness_utility.py  llm_oracle.py  logging_config.py  metrics.py  models.py  oracle.py  oracle_base.py  oracle_legacy.py  oracle_semantic.py  oracle_validation.py  report.py  target.py
agentprobe/adapters/: __init__.py  callable.py  dummy.py  http.py  http_async.py
agentprobe/attacks/: __init__.py  base.py  registry.py  transforms.py
agentprobe/injection/: __init__.py  benign_tasks.py  carriers.py  defenses.py  harness.py  instructions.py  oracle.py  screening.py  tool_agent.py
data/: deepseek.csv  gemini.csv  haiku45.csv  oracle_labeled.jsonl  utility_gpt4omini.csv
examples/: tool_agent.py
examples/ci/: agentprobe.yml
scripts/: ci_outputs.py  gen_results_tables.py  validate_oracle.py
tests/: conftest.py  test_adapters.py  test_async_harness.py  test_async_http.py  test_attacks.py  test_callable_target.py  test_compare.py  test_engine.py  test_engine_async.py  test_false_positives.py  test_injection_probes.py  test_live_oracle.py  test_logging.py  test_metrics.py  test_oracle.py  test_oracle_base.py  test_oracle_integration.py  test_oracle_semantic.py  test_rag_memory.py  test_report.py  test_reproducibility.py  test_smoke.py  test_step3_integration.py
