[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentprobe"
version = "0.2.0"
description = "Security scanner for LLM agents — finds prompt injection, tool abuse, and context leaks. Now with LLM-based semantic judgment and async parallel scanning."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
keywords = ["llm", "security", "prompt-injection", "ai-safety", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "pydantic>=2.5",
    "anthropic>=0.25",
    "litellm>=1.30",
    "tenacity>=8.2",
]

[project.optional-dependencies]
openai = ["openai>=1.30"]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23", "pytest-cov>=4.1", "ruff>=0.4", "black>=24.0"]

[project.scripts]
agentprobe = "agentprobe.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/agentprobe"
Issues = "https://github.com/yourusername/agentprobe/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentprobe"]
