[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentprobe"
version = "0.2.0"
description = "Harness for measuring LLM agent resistance to indirect prompt injection and comparing defense effectiveness."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Samgar" }]
keywords = ["llm", "security", "prompt-injection", "ai-safety", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "pydantic>=2.5",
    "anthropic>=0.25",
    "litellm>=1.30",
    "tenacity>=8.2",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "numpy>=1.24",
]

[project.optional-dependencies]
openai = ["openai>=1.30"]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23", "pytest-cov>=4.1", "ruff>=0.4", "black>=24.0"]

[project.scripts]
agentprobe = "agentprobe.cli:app"

[project.urls]
Homepage = "https://github.com/Samgar-kz/agentprobe"
Issues = "https://github.com/Samgar-kz/agentprobe/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentprobe"]
