[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentprobe-injection"
version = "0.2.0a1"
description = "Regression-oriented evaluation of LLM prompt-injection defenses: measure leak rate, then gate CI on statistically significant regressions."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Samgar" }]
keywords = ["llm", "security", "prompt-injection", "ai-safety", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.28",
    "pydantic>=2.5",
    "anthropic>=0.25",
    "openai>=1.30",
    "litellm>=1.30",
    "tenacity>=8.2",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23", "pytest-cov>=4.1", "ruff>=0.4", "black>=24.0"]

[project.scripts]
agentprobe = "agentprobe.cli:app"

[project.urls]
Homepage = "https://github.com/Samgar-kz/agentprobe"
Issues = "https://github.com/Samgar-kz/agentprobe/issues"

[tool.pytest.ini_options]
markers = [
    "live_llm: test makes real LLM API calls; skipped without a real OPENAI_API_KEY (run with `pytest -m live_llm`).",
]

[tool.hatch.build.targets.wheel]
packages = ["agentprobe"]
